--- a/index.html
+++ b/index.html
@@ -14,8 +14,14 @@
 </head>
 
 <body>
-
-
+    <button class="sidebar__toggle">
+        <i class="fas fa-bars"></i>
+    </button>
+    <aside class="sidebar">
+        <div class="sidebar__header">
+            <img src="img/logo.svg" alt="logo">
+        </div>
+    </aside>
     <!-- javascript -->
 </body>
 
